--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^17.3.0"
+    "helmet": "^4.3.1",
+    "joi": "^17.3.0",
+    "morgan": "^1.10.0"
   }
 }
