--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "0.0.1",
+    "config": "^3.3.3",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "helmet": "^4.3.1",
     "joi": "^17.3.0",
