--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "vidly",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "-": "0.0.1",
-    "config": "^3.3.3",
-    "debug": "^4.3.1",
-    "express": "^4.17.1",
-    "helmet": "^4.3.1",
-    "joi": "^17.3.0",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.0"
-  }
+	"name": "vidly",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"config": "^3.3.3",
+		"debug": "^4.3.1",
+		"express": "^4.17.1",
+		"joi": "^17.3.0",
+		"mongoose": "^5.11.12"
+	}
 }
