--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"config": "^3.3.3",
 		"debug": "^4.3.1",
 		"express": "^4.17.1",
+		"fawn": "^2.1.5",
 		"joi": "^17.3.0",
 		"mongoose": "^5.11.12"
 	}
