--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.0",
 		"config": "^3.3.3",
 		"debug": "^4.3.1",
 		"express": "^4.17.1",
 		"fawn": "^2.1.5",
 		"joi": "^17.3.0",
 		"joi-objectid": "^3.0.1",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"mongoose": "^5.11.12"
 	}
 }
