--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 		"config": "^3.3.3",
 		"debug": "^4.3.1",
 		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
 		"fawn": "^2.1.5",
 		"joi": "^17.3.0",
 		"joi-objectid": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
-		"mongoose": "^5.11.12"
+		"mongoose": "^5.11.12",
+		"winston": "^3.3.3",
+		"winston-mongodb": "^5.0.7"
 	}
 }
