--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watchAll"
+		"test": "jest --testEnvironment=node --watchAll --verbose"
 	},
 	"keywords": [],
 	"author": "",
@@ -25,6 +25,7 @@
 		"winston-mongodb": "^5.0.7"
 	},
 	"devDependencies": {
-		"jest": "^26.6.3"
+		"jest": "^26.6.3",
+		"supertest": "^6.1.3"
 	}
 }
