--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --testEnvironment=node --watchAll --verbose"
+		"test": "jest --testEnvironment=node --watchAll --verbose --maxWorkers=1"
 	},
 	"keywords": [],
 	"author": "",
