--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"joi-objectid": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
 		"mongoose": "^5.11.12",
 		"winston": "^3.3.3",
 		"winston-mongodb": "^5.0.7"
