--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --testEnvironment=node --watchAll --verbose --maxWorkers=1"
+		"test": "jest --testEnvironment=node --watchAll --verbose --maxWorkers=1",
+		"start": "node index.js"
+	},
+	"engines": {
+		"node": "10.23.2"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.0",
+		"compression": "^1.7.4",
 		"config": "^3.3.3",
 		"debug": "^4.3.1",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
 		"fawn": "^2.1.5",
+		"helmet": "^4.4.1",
 		"joi": "^17.3.0",
 		"joi-objectid": "^3.0.1",
 		"jsonwebtoken": "^8.5.1",
